# water-mon-app

./: .Cargo.toml.un~  .gitignore  Cargo.toml  README.md
src/: main.rs
static/: code.js  index.html  style.css
