[package]
name = "water_mon_app"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
edition = "2018"
description = "A local webserver-based app to view Water Monitor readings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = {version = "0.4.10", features = ["serve"]}
serialport = "^3.3.0"
serde = {version = "^1.0.118", features=["derive"]}
chrono = "^0.4.19"
serde_json = "^1.0.60"
local_ipaddress = "^0.1.3"