[package]
name = "quadcopter_preflight"
version = "1.0.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "A local webserver-based app to view Water Monitor readings"
keywords = ["anyleaf", "quadcopter"]
categories = [
    "embedded",
    "hardware-support",
]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = {version = "0.4.10", features = ["serve"]}
serialport = "^4.1.0"
serde = {version = "^1.0.137", features=["derive"]}
chrono = "^0.4.19"
serde_json = "^1.0.81"
local_ipaddress = "^0.1.3"